k8s/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
