k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-delivery-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 4000
      - path: /images
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 4000
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
# -------------------------------------------------------
# This Ingress creates a real AWS ALB (Load Balancer)
# After applying, run:  kubectl get ingress
# You will see the ALB DNS in the ADDRESS column
# Example: k8s-default-food123-abc.ap-south-1.elb.amazonaws.com
# -------------------------------------------------------
